kustomizations/apps/epp/image-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epp-image-server
  namespace: epp
  labels:
    app_name: epp
    app_env: ${app_env}
    app_tier: backend
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: epp-image-server
  template:
    metadata:
      namespace: epp
      labels:
        app: epp-image-server
    spec:
      serviceAccountName: epp-image-server
      containers:
      - name: epp-image-server
        image: ghcr.io/elifesciences/epp-image-server:latest
        ports:
        - containerPort: 8182
        resources:
          requests:
            cpu: "386m"
            memory: "3202Mi"
