kustomizations/apps/epp/image-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: epp-image-server
  namespace: epp
spec:
  ports:
  - port: 8182
  trafficDistribution: PreferClose
